<resources>
    <string name="app_name">到云</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_news">我创建的</string>
    <string name="menu_trending">我加入的</string>
    <string name="menu_profile">我的</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="lab_logout_confirm">是否确认退出？</string>
    <string name="change_Password">修改密码</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s xuexiangjys All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">关于作者</string>
    <string name="about_item_donation_link">捐赠作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://github.com/xuexiangjys/TemplateAppProject</string>
    <string name="url_author_github">https://github.com/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <string name="titls_login">登录</string>
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>

    <!--    登录页面-->
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码</string>
    <string name="lab_return_login">返回登录</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_account">请输入帐号</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_password_again">请再次输入密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0–9])|(14[5,7])|(15[0–3,5–9])|(16[6])|(17[0,1,3,5–8])|(18[0–9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_password_error">请输入至多16位数密码</string>
    <string name="tip_confirm_password_error">两次输入密码必须保持一致</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a–zA–Z])(?=.*[0–9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="to_register">注册</string>
    <string name="str_user_protocol">用户协议</string>
    <string name="str_and">和</string>
    <string name="str_privacy_protocol">隐私政策</string>
    <string name="str_login_or_registration">登陆/注册代表您已阅读并同意</string>
    <string name="str_app_logo">Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_old_pwd">若包含字母，请注意区分大小写</string>
    <string name="enter_new_pwd">6–16位，至少含数字/字母/字符2种组合</string>
    <string name="confirm_new_pwd">请再次输入新密码</string>
    <string name="tv_oldPwd">旧密码:</string>
    <string name="tv_newPwd">新密码:</string>
    <string name="tv_confirmNewPwd">确认密码:</string>
    <string name="et_enterAddress">请输入地址</string>
    <string name="update_user_info">修改资料</string>
    <string name="lab_submit">确定</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_member">成员</string>
    <string name="title_inform">消息</string>
    <string name="title_detail">详情</string>
    <string name="course_name">课程名称</string>
    <string name="course_creator">创建人</string>
    <string name="course_bornDate">创建时间</string>
    <string name="course_code">课程号</string>
    <string name="checkon">签到</string>
    <string name="class_name">课程名称</string>
    <string name="input_class_name">请输入课程名称</string>
    <string name="class_desc">课程简介</string>
    <string name="input_class_desc">请输入课程简介</string>
    <string name="class_code">课程编号</string>
    <string name="input_class_code">请输入课程编号</string>
    <string name="create">创建</string>
    <string name="join">加入</string>
    <string name="create_course">创建班课</string>
    <string name="join_course">加入班课</string>

</resources>
