<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/class_code"
                android:textColor="#333333"
                android:textSize="14sp" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_class_code_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_class_code"
                android:inputType="text"
                app:met_allowEmpty="false"
                app:met_clearButton="true" />

    </LinearLayout>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_join_class"
            style="@style/SuperButton.Primary.Login"
            android:layout_marginTop="16dp"
            android:text="@string/join" />
</LinearLayout>