<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/xui_config_color_white"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <androidx.cardview.widget.CardView
                android:id="@+id/member_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                app:cardBackgroundColor="@color/xui_config_color_white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="true"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="5dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <com.xuexiang.xui.widget.imageview.RadiusImageView
                        android:id="@+id/iv_member_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/xui_ic_default_img"
                        app:riv_border_width="0dp"
                        app:riv_corner_radius="5dp" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv_course_title"
                            style="@style/TextStyle.Content"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:gravity="start|center_vertical"
                            android:maxLines="1"
                            android:singleLine="false"
                            android:textColor="@color/xui_config_color_pure_black"
                            tools:text="工程实践" />

                    <TextView
                            android:id="@+id/tv_course_summary"
                            style="@style/TextStyle.Explain"
                            android:layout_marginTop="3dp"
                            android:ellipsize="end"
                            android:gravity="start|center_vertical"
                            android:maxLines="2"
                            android:singleLine="false"
                            android:textColor="?attr/xui_config_color_content_text"
                            tools:text="000000000" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/course_code"
                android:textColor="#333333"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/tv_course_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="23650"
                android:textColor="#888888"
                android:textSize="14sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/course_creator"
                android:textColor="#333333"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/tv_course_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="孔乙己"
                android:textColor="#888888"
                android:textSize="14sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/course_bornDate"
                android:textColor="#333333"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/tv_course_bornDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2020-04-15"
                android:textColor="#888888"
                android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>